--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.483.0",
     "motion": "^12.5.0",
     "next": "15.2.3",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.7.15",
     "react": "^19.0.0",
