--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@tabler/icons-react": "^3.31.0",
+    "@tailwindcss/typography": "^0.0.0-insiders.0339c42",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dicons": "^1.1.7",
     "framer-motion": "^12.5.0",
+    "fs": "^0.0.1-security",
+    "gray-matter": "^4.0.3",
     "lenis": "^1.2.3",
     "lucide-react": "^0.483.0",
     "motion": "^12.5.0",
